--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "@sctg/sentencepiece-js": "^1.3.3",
     "edge-tts-universal": "^1.3.3"
   }
 }
